--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node src/app/server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node src/app/server.js",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
